--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -79,7 +79,6 @@
     css.innerHTML = ".txt-rotate > .wrap { border-right: 0.1em solid #666 }";
     document.body.appendChild(css);
   };
-  
         </script>
       </h1>
 
@@ -90,11 +89,17 @@
 
       <!-- CTA Button -->
       <div class="flex justify-center">
+       <% if (Date.now() > 1707091200000) { %>
         <a href="/gen" id="cta" class="bg-yellow-400 hover:bg-yellow-700 text-white font-bold py-3 px-6 rounded-full uppercase tracking-wide">
           Get started now
         </a>
       </div>
-
+      <% } else { %>
+      <a href="/countdown" id="cta" class="bg-yellow-400 hover:bg-yellow-700 text-white font-bold py-3 px-6 rounded-full uppercase tracking-wide">
+        Get started now
+      </a>
+      </div>
+      <% } %>
       <!-- Features -->
       <div class="mt-16">
         <h2 class="text-2xl font-bold text-gray-100 mb-8">Features</h2>
