--- a/public/home.css
+++ b/public/home.css
@@ -6,3 +6,27 @@
     display: inline-block;
     vertical-align: middle;
 }
+
+.navbarmenu {
+  width: 50%;
+  height: 100%;
+  position: sticky;
+  margin: auto;
+  border-radius: 25px 25px 25px 25px;
+}
+.mobile-menu {
+  left: -200%;
+  transition: 0.5s;
+}
+
+.mobile-menu.active {
+ left: 0;
+}
+
+.mobile-menu ul li ul {
+  display: none;
+}
+
+ .mobile-menu ul li:hover ul {
+  display: block;
+}
