--- a/public/style.css
+++ b/public/style.css
@@ -12,3 +12,10 @@
     padding: 24px;
     margin: 32px 0;
 }
+#navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: white;
+    border-radius: 25px 25px 25px 25px;
+}
