Update Tailwind For production

--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>QGenie - Your personal exam question generator</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://unpkg.com/tailwindcss-cdn@3.4.0/tailwindcss-with-all-plugins.js"></script>
     <script src="https://kit.fontawesome.com/12061f55da.js" crossorigin="anonymous"></script>
     <script src="https://js.stripe.com/v3/"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/@alpinejs/intersect@3.x.x/dist/cdn.min.js"></script>
