Update DB Conflicts (part 1)

--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -11,7 +11,7 @@
     <script defer src="https://cdn.jsdelivr.net/npm/@alpinejs/intersect@3.x.x/dist/cdn.min.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <link rel="icon" href="./assets/new/QTP.svg" />
-    <link rel="stylesheet" href="./home.css">
+    <link rel="stylesheet" href="../home.css">
   </head>
   <body class="bg-gray-900 mx-8 mt-5">
     <nav class="navbarmenu pt-4 bg-white mt-5 top-0 md:h-18 shadow-xl">
@@ -304,7 +304,7 @@ mobile_icon.addEventListener('click', openCloseMenu);
               <h3 class="text-xl font-bold text-gray-800 mb-4">QGenius</h3>
                 <div class="flex justify-center items-center">
               <img src="./assets/new/qgenius.png" class="size-24" alt="QGenius"></div>
-              <p class="text-gray-800 mb-4">£9.99/month</p>
+              <p class="text-gray-800 mb-4">From £4.99/month</p>
               <ul class="text-gray-800">
                 <li>
                   <img class="check" src="./assets/check.svg" style="display: inline-block;"> 
@@ -334,7 +334,7 @@ mobile_icon.addEventListener('click', openCloseMenu);
                 <img src="./assets/new/qgeniusplus.png" class=" align-center size-24" alt="QGenius+">
               </div>
 
-              <p class="text-gray-800 mb-4">£19.99/month</p>
+              <p class="text-gray-800 mb-4">From £9.99/month</p>
               <ul class="text-gray-800">
                 <li>
                   <img class="check" src="./assets/check.svg" style="display: inline-block;">
