--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -323,8 +323,10 @@ mobile_icon.addEventListener('click', openCloseMenu);
                   <span class="text">Access to model answers</span>
                 </li>
               </ul>
-                <button id="checkout-and-portal-button" class="bg-blue-500 hover:bg-blue-700 text-white font-bold mt-4 py-2 px-4 rounded-full w-5/6" type="submit">Checkout</button>
-            </div>
+              <a href="/subscribe">
+                <button id="checkout-and-portal-button" class="bg-blue-500 hover:bg-blue-700 text-white font-bold mt-4 py-2 px-4 rounded-full w-5/6" type="submit">See More   <i class="fa-solid fa-arrow-up-right-from-square"></i></button>
+              </a>
+              </div>
           </div>
           <br>
           <div class="flex-1 mt-4 mb-8 md:mb-0 md:mr-8">
@@ -334,7 +336,7 @@ mobile_icon.addEventListener('click', openCloseMenu);
                 <img src="./assets/new/qgeniusplus.png" class=" align-center size-24" alt="QGenius+">
               </div>
 
-              <p class="text-gray-800 mb-4">From £9.99/month</p>
+              <p class="text-gray-800 mb-4">From £5.99/month</p>
               <ul class="text-gray-800">
                 <li>
                   <img class="check" src="./assets/check.svg" style="display: inline-block;">
@@ -350,8 +352,10 @@ mobile_icon.addEventListener('click', openCloseMenu);
                   <img class="check" src="./assets/check.svg" style="display: inline-block;">
                   <span class="text">Access to model answers</span>
                 </li>
-              </ul> 
-                <button id="checkout-and-portal-button" class="bg-blue-500 hover:bg-blue-700 text-white font-bold mt-4 mb-4 mx-8 py-2 px-4 rounded-full w-5/6" type="submit">Checkout</button>
+              </ul>
+              <a href="/subscribe">
+                <button id="checkout-and-portal-button" class="bg-blue-500 hover:bg-blue-700 text-white font-bold mt-4 mb-4 mx-8 py-2 px-4 rounded-full w-5/6" type="submit">See More   <i class="fa-solid fa-arrow-up-right-from-square"></i></button>
+              </a>
               </div>
           </div>
         </div>
