--- a/public/views/gen.ejs
+++ b/public/views/gen.ejs
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>QGenie - Your Exam Question Companion</title>
-    <!-- MathJax, only on tex loads-->
 
-    <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML"></script>
-    <script src="check-for-tex.js" defer></script>
+      <!-- To automatically render math in text elements, include the auto-render extension: -->
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css" integrity="sha384-n8MVd4RsNIU0tAv4ct0nTaAbDJwPJzDEaqSD1odI+WdtXRGWt2kTvGFasHpSy3SV" crossorigin="anonymous">
+      <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.js" integrity="sha384-XjKyOOlGwcjNTAIQHIpgOno0Hl1YQqzUOEleOLALmuqehneUG+vnGctmUb0ZY0l8" crossorigin="anonymous"></script>
+<script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/contrib/auto-render.min.js" integrity="sha384-+VBxd3r6XgURycqtZ117nYw44OOcIax56Z4dCRWbxyPt0Koah1uHoK0o4+/RRE05" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link href="
     https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css
@@ -43,18 +44,21 @@
                                     <option value="2">Edexcel A Level Economics A: The UK Economy - Performance and Policies</option>
                                     <option value="3">AQA A Level History: Tsarist and Communist Russia, 1855-1964</option>
                                     <option value="4">AQA A Level History: The English Revolution, 1625-1642</option>
-                                    <option value="5">Edexcel A Level Mathematics: Year 1 Stats and Mechanics</option>
-                                    <option value="6">Edexcel A Level Mathematics: Year 1 Pure</option>                                    
-                                    <option value="7">Edexcel A Level Mathematics: Year 2 Pure</option>
-                                    <option value="8">Edexcel A Level Mathematics: Year 2 Stats and Mechanics</option>
-                                    <option value="9">AQA A Level Geography: Physical Geography</option>
-                                    <option value="10">AQA A Level Geography: Human Geography</option>
-                                    <option value="11">Edexcel A Level Government and Politics: UK Government</option>
-                                    <option value="12">Edexcel A Level Government and Politics: UK Politics</option>
-                                    <option value="13">OCR A Level Media Studies: Media Messages</option>
-                                    <option value="14">AQA A Level Biology</option>
-                                    <option value="15">Edexcel A Level Chemistry: Advanced Inorganic and Physical Chemistry</option>
-                                    <option value="16">Edexcel A Level Chemistry: Advanced Organic and Physical Chemistry</option>
+                                    <option value="5">Edexcel A Level Mathematics: Statistics</option>
+                                    <option value="6">Edexcel A Level Mathematics: Pure Mathematics</option>                                    
+                                    <option value="7">Edexcel A Level Mathematics: Mechanics</option>
+                                    <option value="8">Edexcel A Level Further Mathematics: Core Pure</option>
+                                    <option value="9">Edexcel A Level Further Mathematics: Further Statistics</option>
+                                    <option value="10">Edexcel A Level Further Mathematics: Further Mechanics</option>
+                                    <option value="11">AQA A Level Geography: Physical Geography</option>
+                                    <option value="12">AQA A Level Geography: Human Geography</option>
+                                    <option value="13">Edexcel A Level Government and Politics: UK Government</option>
+                                    <option value="14">Edexcel A Level Government and Politics: UK Politics</option>
+                                    <option value="15">OCR A Level Media Studies: Media Messages</option>
+                                    <option value="16">AQA A Level Biology</option>
+                                    <option value="17">Edexcel A Level Chemistry: Advanced Inorganic and Physical Chemistry</option>
+                                    <option value="18">Edexcel A Level Chemistry: Advanced Organic and Physical Chemistry</option>
+                                    <option value="19">AQA A Level Physics</option>
                                 </select>
                             </div>
                             <button id="generate-btn" class="flex-shrink-0 bg-white hover:bg-gray-300 border-white hover:border-gray-300 text-indigo-500 hover:text-white border-4 text-sm font-bold py-1 px-2 rounded" type="button">
