--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -283,7 +283,7 @@ mobile_icon.addEventListener('click', openCloseMenu);
                 </li>
                 <li>
                   <img class="check" src="./assets/check.svg" style="display: inline-block;"> 
-                  <span class="text">Access to 5 generations per hour</span>
+                  <span class="text">Access to 10 generations per day</span>
                 </li>
                 <li>
                   <img class="check" src="./assets/cross.svg" style="display: inline-block;">
@@ -292,6 +292,14 @@ mobile_icon.addEventListener('click', openCloseMenu);
                 <li>
                   <img class="check" src="./assets/cross.svg" style="display: inline-block;">
                   <span class="text">Access to model answers</span>
+                </li>
+                <li>
+                  <img class="check" src="./assets/cross.svg" style="display: inline-block;">
+                  <span class="text">Access to Extracts for Essays</span>
+                </li>
+                <li>
+                  <img class="check" src="./assets/cross.svg" style="display: inline-block;">
+                  <span class="text">Upload your own questions/extracts</span>
                 </li>
               </ul>
             </div>
@@ -316,11 +324,19 @@ mobile_icon.addEventListener('click', openCloseMenu);
                 </li>
                 <li>
                   <img class="check" src="./assets/check.svg" style="display: inline-block;">
-                  <span>Access to 10 generations per hour</span>
+                  <span>Access to unlimited generations</span>
+                </li>
+                <li>
+                  <img class="check" src="./assets/check.svg" style="display: inline-block;">
+                  <span class="text">Access to model answers</span>
                 </li>
                 <li>
                   <img class="check" src="./assets/cross.svg" style="display: inline-block;">
-                  <span class="text">Access to model answers</span>
+                  <span class="text">Access to Extracts for Essays</span>
+                </li>
+                <li>
+                  <img class="check" src="./assets/cross.svg" style="display: inline-block;">
+                  <span class="text">Upload your own questions/extracts</span>
                 </li>
               </ul>
               <a href="/subscribe">
@@ -347,11 +363,21 @@ mobile_icon.addEventListener('click', openCloseMenu);
                 <li>
                   <img class="check" src="./assets/check.svg" style="display: inline-block;">
                   <span class="text">
-                  Unlimited generations per hour</span></li>
+                  Unlimited generations per day</span></li>
                 <li>
                   <img class="check" src="./assets/check.svg" style="display: inline-block;">
                   <span class="text">Access to model answers</span>
                 </li>
+                <li>
+                  <img class="check" src="./assets/check.svg" style="display: inline-block;">
+                  <span class="text">Access to Extracts for Essays</span>
+                </li>
+                <li>
+                  <img class="check" src="./assets/check.svg" style="display: inline-block;">
+                  <span class="text">Upload your own questions/extracts</span>
+                </li>
+                <li>
+  
               </ul>
               <a href="/subscribe">
                 <button id="checkout-and-portal-button" class="bg-blue-500 hover:bg-blue-700 text-white font-bold mt-4 mb-4 mx-8 py-2 px-4 rounded-full w-5/6" type="submit">See More   <i class="fa-solid fa-arrow-up-right-from-square"></i></button>
