--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="../home.css">
   </head>
   <body class="bg-gray-900 mx-8 mt-5">
-    <nav class="navbarmenu pt-4 bg-white mt-5 top-0 md:h-18 shadow-xl">
-      <div class="container flex justify-between items-center sticky  px-8 mx-auto md:flex">
+    <nav class="md:navbarmenu pt-4 bg-white mt-5 top-0 md:h-18 md:rounded-full sticky sm:w-full shadow-xl">
+      <div class="container flex justify-between items-center px-8 md:mx-auto md:flex">
       <img src="../assets/new/QGL.svg" class="size-24 my-auto" alt="Tailwindcss Navigation">
 
       <ul class="hidden md:flex my-auto space-x-6">
@@ -36,14 +36,14 @@
     </div>    
   
   <!-- Mobile menu -->
-  <div class="md:hidden flex justify-center bg-gray-300 bg-opacity-50 mt-3 rounded-full w-full">
-    <div id="mobile-menu" class="mobile-menu absolute top-23 w-full rounded-full"> <!-- add hidden here later -->
-      <ul class="bg-gray-100 shadow-lg leading-9 font-bold h-screen">
+  <div class="md:hidden flex justify-center bg-gray-300 bg-opacity-50 mt-3 w-full">
+    <div id="mobile-menu" class="mobile-menu absolute top-23 w-full "> <!-- add hidden here later -->
+      <ul class="bg-gray-100 shadow-lg leading-9 font-bold text-center h-screen">
         <li><a href="#" class="text-black rounded-full">Home</a></li>
-        <li><a href="#"class="text-black rounded-full onclick="document.getElementById('features').scrollIntoView({behavior: 'smooth'})">Features</a></li>
-        <li><a href="#"class="text-black rounded-full onclick="document.getElementById('testimonials').scrollIntoView({behavior: 'smooth'})">Testimonials</a> </li>
-        <li><a href="#"class="text-black rounded-full onclick="document.getElementById('pricing').scrollIntoView({behavior: 'smooth'})">Pricing</a></li>
-        <li><a href="#"class="text-black rounded-full onclick="document.getElementById('contact').scrollIntoView({behavior: 'smooth'})">Contact</a></li>
+        <li><a href="#"class="text-black rounded-full" onclick="changeIcon(hamburger_icon);openCloseMenu();document.getElementById('features').scrollIntoView({behavior: 'smooth'});">Features</a></li>
+        <li><a href="#"class="text-black rounded-full" onclick="changeIcon(hamburger_icon);openCloseMenu();document.getElementById('testimonials').scrollIntoView({behavior: 'smooth'});">Testimonials</a> </li>
+        <li><a href="#"class="text-black rounded-full" onclick="changeIcon(hamburger_icon);openCloseMenu();document.getElementById('pricing').scrollIntoView({behavior: 'smooth'});">Pricing</a></li>
+        <li><a href="#"class="text-black rounded-full" onclick="changeIcon(hamburger_icon);openCloseMenu();document.getElementById('contact').scrollIntoView({behavior: 'smooth'});">Contact</a></li>
       </ul>
       </div>
   </div>
