Add google adsense verification

--- a/public/views/gen.ejs
+++ b/public/views/gen.ejs
@@ -16,6 +16,8 @@
     " rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="./assets/new/QTP.svg" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2082633794690573"
+     crossorigin="anonymous"></script>
 </head>
 <body class="bg-gradient-to-r from-indigo-500 to-blue-500">
     <nav class="flex items-center justify-between flex-wrap bg-transparent p-6">
