--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -12,6 +12,8 @@
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <link rel="icon" href="./assets/new/QTP.svg" />
     <link rel="stylesheet" href="../home.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2082633794690573"
+     crossorigin="anonymous"></script>
   </head>
   <body class="bg-gray-900 mx-8 mt-5">
     <nav class="md:navbarmenu pt-4 bg-white mt-5 top-0 md:h-18 md:rounded-full sticky sm:w-full shadow-xl">
