--- a/public/views/gen.ejs
+++ b/public/views/gen.ejs
@@ -18,6 +18,7 @@
     <link rel="icon" href="./assets/new/QTP.svg" />
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2082633794690573"
      crossorigin="anonymous"></script>
+     <script async src="https://fundingchoicesmessages.google.com/i/pub-2082633794690573?ers=1" nonce="J_yMnRBLI9j6193kFT-Byg"></script><script nonce="J_yMnRBLI9j6193kFT-Byg">(function() {function signalGooglefcPresent() {if (!window.frames['googlefcPresent']) {if (document.body) {const iframe = document.createElement('iframe'); iframe.style = 'width: 0; height: 0; border: none; z-index: -1000; left: -1000px; top: -1000px;'; iframe.style.display = 'none'; iframe.name = 'googlefcPresent'; document.body.appendChild(iframe);} else {setTimeout(signalGooglefcPresent, 0);}}}signalGooglefcPresent();})();</script>
 </head>
 <body class="bg-gradient-to-r from-indigo-500 to-blue-500">
     <nav class="flex items-center justify-between flex-wrap bg-transparent p-6">
